--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-this is my first app
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            APP1
+        </title>
+    </head>
+    <body>
+        this is my first app
+    </body>
+</html>
