--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            APP1
-        </title>
+        <title>APP1</title>
+        <style>
+            .box{
+                width: 100px;
+                height: 100px;
+                background-color: red;
+            }
+        </style>
     </head>
-    <body>
-        this is my first app
+    <body style="background-color: aquamarine;">
+        <h1>this is my first app </h1>
+        <div class="box"> </div>
+        <div class="box"> </div>
+        <div class="box"> </div>
+        <div class="box"> </div>
+        <div class="box"> </div>
+        <div class="box"> </div>
     </body>
 </html>
