made an actual about

--- a/about.html
+++ b/about.html
@@ -1,1 +1,9 @@
-This is about me
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>About me</title>
+    </head>
+    <body>
+      Total Eclipse of my heart...
+    </body>
+</html>
